--- a/frontend/docs/src/theme/BlogPostItem/Header/Title/styles.module.css
+++ b/frontend/docs/src/theme/BlogPostItem/Header/Title/styles.module.css
@@ -15,6 +15,10 @@ h2 a{
   color: var(--color-text-title-light);
 }
 
+[data-theme="dark"] h2 a{
+  color: var(--color-text-title-dark);
+}
+
 h2 a:hover{
   color: var(--color-primary-400)
 }
