--- a/frontend/docs/src/theme/DocSidebarItem/Category/styles.module.css
+++ b/frontend/docs/src/theme/DocSidebarItem/Category/styles.module.css
@@ -14,15 +14,18 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   padding: 0.2em;
-  color: var(--color-text-body-light);
+  color: light-dark(var(--color-text-body-light), var(--color-text-body-dark));
 }
 
+:global(.menu__link--active) .categoryLinkLabel {
+  color: light-dark(var(--color-primary-600), var(--color-primary-300));
+}
 h1{
   font-size: 2.25rem;
   font-weight: 700;
   letter-spacing: -0.025em;
   margin-bottom: 1.5rem;
-  color: var(--color-text-title-light);
+  color: light-dark(var(--color-text-title-light), var(--color-text-title-dark));
 }
 
 header p{
@@ -32,9 +35,8 @@ header p{
   max-width: 42rem;
   margin-left: auto;
   margin-right: auto;
-  color: var(--color-text-body-light);
+  color: light-dark(var(--color-text-body-light), var(--color-text-body-dark));
 }
-
 
 .sidebarIcon {
   display: flex; 
@@ -42,10 +44,10 @@ header p{
   align-items: center;
   margin-right: 0.5rem; 
   flex-shrink: 0; 
-  color: var(--color-text-body-light);
+  color: light-dark(var(--color-text-body-light), var(--color-text-body-dark));
+}
+:global(.menu__link--active) .sidebarIcon {
+  color: light-dark(var(--color-primary-600), var(--color-primary-300));
 }
 
-.sidebarIcon--active {
-  color: var(--color-primary-500);
-}
 
