--- a/frontend/docs/src/theme/DocSidebarItem/Link/styles.module.css
+++ b/frontend/docs/src/theme/DocSidebarItem/Link/styles.module.css
@@ -8,5 +8,6 @@
   line-clamp: 2;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
-  color: var(--color-text-body-light);
+  color: light-dark(var(--color-text-body-light), var(--color-text-body-dark));
 }
+
